# rk3588-vi-demo

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
